# herbal-moonlight

./: Cargo.toml  PLAN_IMPLEMENTACION.md  README.md
contracts/groth16-verifier/: Cargo.toml
contracts/groth16-verifier/src/: lib.rs
contracts/herbal-moonlight/: Cargo.toml  README.md
contracts/herbal-moonlight/src/: lib.rs  test.rs
docs/: ARCHITECTURE.md  AUDIT_REPORT_HERBAL_MOONLIGHT.md  CONTRIBUTING_UI.md  PENDING_FEATURES.md  Zk-hackaton-context.md  game-design.md  zk-implementation.md
frontend/src/: App.tsx
frontend/src/components/: GamesCatalog.tsx  Resources.tsx
herbal-moonlight-frontend/: index.html
herbal-moonlight-frontend/src/: App.tsx  config.ts  index.css
herbal-moonlight-frontend/src/components/: Layout.css  Layout.tsx
herbal-moonlight-frontend/src/games/herbal-moonlight/: HerbalMoonlightGame.tsx  LandingScreen.tsx  bindings.ts  gardenUtils.ts  herbalMoonlightService.ts
herbal-moonlight-frontend/src/utils/: constants.ts
scripts/: bindings.ts  create.ts  deploy.ts
sgs_frontend/src/components/: GamesCatalog.tsx
sgs_frontend/src/games/herbal-moonlight/: bindings.ts  herbalMoonlightService.ts  index.tsx
zk-prover/: Cargo.toml  README.md  my-garden.json
zk-prover/host/: Cargo.toml
zk-prover/host/src/: lib.rs  main.rs
zk-prover/methods/: Cargo.toml  build.rs
zk-prover/methods/guest/: Cargo.toml
zk-prover/methods/guest/src/: main.rs
zk-prover/methods/src/: lib.rs
zk-prover/shared/: Cargo.toml
zk-prover/shared/src/: lib.rs
