[workspace]
resolver = "2"
members = [
    "shared",
    "methods",
    "host",
]
# Guest is excluded because it's compiled for RISC-V by risc0-build
exclude = [
    "methods/guest",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# RiscZero dependencies
risc0-zkvm = "1.2"
risc0-build = "1.2"

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
bincode = "1.3"

# Cryptography
sha2 = { version = "0.10", default-features = false }

# CLI and utilities (host only)
anyhow = "1.0"
hex = "0.4"
clap = { version = "4.0", features = ["derive"] }

# Local crates
herbal-shared = { path = "shared" }
herbal-methods = { path = "methods" }
