[package]
name = "herbal-host"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proof generator (host) for Herbal Moonlight ZK circuits"

[[bin]]
name = "herbal-prover"
path = "src/main.rs"

[lib]
name = "herbal_host"
path = "src/lib.rs"

[features]
default = []
# Dev mode: generates mock proofs without Docker/RiscZero toolchain
dev = ["herbal-methods/dev"]

[dependencies]
risc0-zkvm = { workspace = true }
herbal-shared = { workspace = true }
herbal-methods = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
hex = { workspace = true }
clap = { workspace = true }
