[package]
name = "cell-reveal"
version = "0.1.0"
edition = "2021"

# This package is intentionally not part of the parent workspace
# It's compiled separately for RISC-V by risc0-build
[workspace]

[dependencies]
risc0-zkvm = { version = "1.2", default-features = false }
herbal-shared = { path = "../../shared" }
sha2 = { version = "0.10", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
